# EasyApply-Automator

./: .coverage  .env.example  .gitignore  LICENSE  README.md  config.yaml  easy_apply_bot.py  pyproject.toml  questions_answers.yaml  requirements.txt  run.bat  run.sh
.github/workflows/: ci.yml
easy_apply_automator/: __init__.py
easy_apply_automator/app/: orchestrator.py  runner.py  search_loop.py
easy_apply_automator/config/: __init__.py  loader.py  schema.py  timing.py
easy_apply_automator/domain/: models.py
easy_apply_automator/infra/: browser_factory.py  repositories.py
easy_apply_automator/observability/: events.py  logger.py
easy_apply_automator/qa/: auto_answer.py
easy_apply_automator/services/: _form_filler.py  _submit_flow.py  apply_flow_service.py  base.py  diagnostics_service.py  question_service.py  session_service.py  throughput_service.py
tests/: conftest.py  test_auto_answer.py  test_config_loader.py  test_domain_models.py  test_question_service.py  test_session_service.py  test_throughput_service.py
