[project]
name = "easy-apply-automator"
version = "1.0.0"
description = "LinkedIn Easy Apply automation bot using Python and Selenium with YAML-based form answering."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = [
  "linkedin",
  "easy-apply",
  "automation",
  "python",
  "selenium",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "beautifulsoup4>=4.12.3",
  "lxml>=5.2.2",
  "packaging>=24.1",
  "pandas>=2.2.2",
  "pyautogui>=0.9.54",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.1",
  "selenium>=4.23.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-mock>=3.12",
  "ruff>=0.4",
  "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["easy_apply_automator*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = [
  "E501",   # line too long — enforced by formatter, not linter
]

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = false
ignore_missing_imports = true
warn_return_any = false
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["tests"]
